@@ -8,6 +8,7 @@ import java.util.Optional;
 
 import java.util.function.BiConsumer;
 
+import client.data.WebSocketManager;
 import com.google.inject.Inject;
 
 import client.Main;
@@ -23,11 +24,8 @@ import client.utils.RecipeInstructionUICtrl;
 import client.utils.SearchCtrl;
 import client.utils.ServerUtils;
 import client.utils.ToBeAddedCtrl;
-import commons.Ingredient;
-import commons.NutritionalValue;
-import commons.Recipe;
-import commons.RecipeIngredient;
-import commons.ShoppingList;
+import commons.*;
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
@@ -47,6 +45,7 @@ import javafx.scene.text.FontWeight;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import javafx.util.Pair;
+import org.springframework.messaging.simp.stomp.StompSession;
 
 import java.io.*;
 import java.util.*;
@@ -59,6 +58,9 @@ public class RecipesWindowCtrl {
 
     private final ServerUtils server = Main.INJECTOR.getInstance(ServerUtils.class);
 
+    private final WebSocketManager socker;
+
+    private volatile StompSession.Subscription titleSubscription;
 
     @FXML
     private ListView<Recipe> sidebarRecipeNamesList;
@@ -75,6 +77,12 @@ public class RecipesWindowCtrl {
 
     @FXML
     private Label cancelSearchButton;
+
+    @FXML
+    private TextField totalServingsField;
+
+    @FXML
+    private Label totalServingsLabel;
 
     @FXML
     private Button downloadButton;
@@ -118,6 +126,7 @@ public class RecipesWindowCtrl {
 
     /**
      * Injectable constructor for RecipesWindowCtrl
+     * @param socker WebSocketManager instance
      * @param c ErrorCtrl instance for error
      * @param p Primary Ctrl instance
      * @param storage - The local storage storing recipes and ingredients
@@ -125,7 +134,8 @@ public class RecipesWindowCtrl {
      * @param s - The injected search control
      */
     @Inject
-    public RecipesWindowCtrl(ErrorCtrl c, PrimaryCtrl p, LocalStorage storage, DataManipulator dataManipulator, SearchCtrl s) {
+    public RecipesWindowCtrl(WebSocketManager socker, ErrorCtrl c, PrimaryCtrl p, LocalStorage storage, DataManipulator dataManipulator, SearchCtrl s) {
+        this.socker = socker;
         this.errorCtrl = c;
         this.primaryCtrl = p;
         this.storage = storage;
@@ -171,11 +181,103 @@ public class RecipesWindowCtrl {
             }
         });
 
+        initializeTotalServings();
+
         // Deactivate recipe specific buttons, since nothing is selected at the start.
         updateRecipeSelectionState(false);
 
         initializeSceneEvents();
         intializeSearchElements();
+    }
+
+    /**
+     * Initializes the total servings field to be of type integer and adds listeners.
+     */
+    private void initializeTotalServings() {
+        // Set text field of servings amount selector to integers
+        totalServingsField.setTextFormatter(new TextFormatter<> (e -> {
+            if (e.getControlNewText().matches("\\d*")) {
+                return e;
+            } else {
+                return null;
+            }
+        }));
+
+        // New listener for total servings TextField
+        // Saves the servings amount
+        totalServingsField.setOnKeyReleased(e -> {
+            if (e.getCode() == KeyCode.ENTER) {
+                addRecipeServings();
+                totalServingsField.getParent().requestFocus();
+            }
+        });
+        // Focused Property Listener, saves when the TextField loses focus
+        totalServingsField.focusedProperty().addListener((obs,
+                                                       oldFocused, newFocused) -> {
+            if (oldFocused && !newFocused) {
+                addRecipeServings();
+            }
+        });
+    }
+
+    /**
+     * Sets the total servings label to the correct amount and resets the field.
+     */
+    private void updateTotalServingsUI() {
+        totalServingsLabel.setText(
+                "Total servings: " + currentRecipe.getTotalServings()
+        );
+
+        totalServingsField.setText("");
+    }
+
+    /**
+     * This is the greatest method I have ever written.
+     * A new thread is created and subscribes to the websocket for title and only title updates via WebSocketManager.
+     * Upon notification of any changes, the program will return to the UI thread via Platform.runLater() and will
+     * 1. Change the name of the recipe in the localstorage
+     * 2. Refresh the sidebar for the name update
+     * 3. If the recipe is currently selected, update the name in the title bar
+     * THIS MUST ALWAYS BE RUN WHEN RECIPEWINDOW COMES INTO VIEW
+     */
+    public void startup() {
+        if (titleSubscription != null) {
+            return;
+        }
+        Thread subscribeThread = new Thread(() -> {
+            titleSubscription = socker.subscribe("/updates/title", TitleUpdate.class, update -> {
+                Platform.runLater(() -> {
+                    System.out.println("Title of recipe " + update.id() + " Changed!");
+                    dataManipulator.changeNameLocal(update.id(), update.newTitle());
+//                    dataManipulator.refreshRecipes();
+                    // A "softer" refresh is required to keep selection
+                    sidebarRecipeNamesList.refresh();
+                    if (currentRecipe.getId().equals(update.id())) {
+                        recipeNameField.setText(update.newTitle());
+                    }
+                });
+            });
+            if (titleSubscription == null ) {
+                Platform.runLater(() -> {
+                    errorCtrl.showGenericError("Could not subscribe to title changes, server might be down!");
+                });
+            }
+        });
+        subscribeThread.setDaemon(true);
+        subscribeThread.start();
+        dataManipulator.refreshRecipes();
+    }
+
+    /**
+     * This should be run when RecipesWindowCtrl goes out of view
+     * It ensures the app isn't subscribed into any unnecessary updates
+     */
+    public void shutdown() {
+        if (titleSubscription != null) {
+            titleSubscription.unsubscribe();
+            titleSubscription = null;
+            System.out.println("Unsubscribed from title updates.");
+        }
     }
 
     /**
@@ -213,9 +315,9 @@ public class RecipesWindowCtrl {
                     ObservableList<Recipe> searchResults = FXCollections.observableArrayList(
                             favFilter(
                                     searchCtrl.query(
-                                    searchField.getText(), storage.getRecipes()
-                            ),
-                            storage.getFavoriteIDs())
+                                            searchField.getText(), storage.getRecipes()
+                                    ),
+                                    storage.getFavoriteIDs())
                     );
                     sidebarRecipeNamesList.setItems(searchResults); //show results in the sidebar
                     searchField.getParent().requestFocus(); //shift focus to a different element, away from the searchField
@@ -282,6 +384,12 @@ public class RecipesWindowCtrl {
      */
     private void updateRecipeSelectionState(boolean active) {
 
+        totalServingsField.setDisable(!active);
+        totalServingsField.setVisible(active);
+
+        totalServingsLabel.setDisable(!active);
+        totalServingsLabel.setVisible(active);
+
         downloadButton.setDisable(!active);
         downloadButton.setVisible(active);
 
@@ -301,7 +409,7 @@ public class RecipesWindowCtrl {
             Label noRecipeSelectedLabel = new Label("You have not selected any recipe yet!\n" +
                     "Select one in the list on the right or create your very own.");
             noRecipeSelectedLabel.setStyle(
-                            "-fx-text-fill: #6b7280; " +
+                    "-fx-text-fill: #6b7280; " +
                             "-fx-font-size: 14; " +
                             "-fx-padding: 12;"
             );
@@ -340,6 +448,8 @@ public class RecipesWindowCtrl {
         // Activate recipe specific buttons
         updateRecipeSelectionState(true);
 
+        updateTotalServingsUI();
+
     }
 
     private final int fontSize = 16;
@@ -368,7 +478,6 @@ public class RecipesWindowCtrl {
             ingCtrl.setIndex(i);
             VBox.setVgrow(ingNode, Priority.ALWAYS);
             recipeView.getChildren().add(ingNode);
-
             Long ingredientId = (ri.getIngredient() != null) ? ri.getIngredient().getId() : null;
             long recipeId = currentRecipe.getId();
 
@@ -381,16 +490,18 @@ public class RecipesWindowCtrl {
                     if (!success) {
                         errorCtrl.showGenericError("Failed to delete ingredient from server.");
                     }
+                    System.out.println("Ingredient \"" + ri.getIngredient().getName() + "\" deleted successfully");
                     return;
                 }
                 openRecipe(currentRecipe);
             });
-            // Editing ingredient Logic!
-            ingCtrl.setEditIngredient(() -> {
+            ingCtrl.setEditIngredient(() -> {             // Editing ingredient Logic!
                 handleIngredientInput(ri.getIngredient().getName(), ri.getQuantity(), (newName, newQty) -> {
                     ri.setQuantity(newQty);
                     ri.getIngredient().setName(newName);
                     openRecipe(currentRecipe);
+                    server.updateRecipe(currentRecipe);
+                    System.out.println("Ingredient \"" + ri.getIngredient().getName() + "\" updated successfully");
                 });
             });
         }
@@ -409,6 +520,7 @@ public class RecipesWindowCtrl {
             menu.setOnAction((actionEvent) -> {
                 recipeIngredients.add(new RecipeIngredient(currentRecipe,
                         ingredient, 0.0));
+                System.out.println("Added a new ingredient \"" + ingredient.getName() + "\" to \"" + currentRecipe.getName() + "\"");
                 updateRefresh();
             });
             addButton.getItems().add(menu);
@@ -492,7 +604,9 @@ public class RecipesWindowCtrl {
             // Edit Logic
             instCtrl.setEditInstruction(newInstruction -> {
                 // This code is run when a string is passed into the editInstruction consumer
-                System.out.println("Instruction edit from " + recipeInstructions.get(currentIndex) + " to " + newInstruction);
+                if(!instruction.equals("New Instruction")) {
+                    System.out.println("Instruction edited successfully");
+                }
                 recipeInstructions.set(currentIndex, newInstruction);
                 Recipe updated = server.updateRecipe(currentRecipe);
                 if (updated == null) {
@@ -520,6 +634,7 @@ public class RecipesWindowCtrl {
             recipeInstructions.add("New Instruction");
             newInstructionAdded = true;
             openRecipe(currentRecipe);
+            System.out.println("Added instruction");
         });
         recipeView.requestLayout();
     }
@@ -539,19 +654,17 @@ public class RecipesWindowCtrl {
     @FXML
     public void onCloneRecipe() {
         cancelSearch();
-        Recipe recipe = currentRecipe;
-        if (recipe == null) {
-            recipe = sidebarRecipeNamesList.getSelectionModel().getSelectedItem();
-        }
-        if (recipe == null) {
+        if (currentRecipe == null) {
+            currentRecipe = sidebarRecipeNamesList.getSelectionModel().getSelectedItem();
             return;
         }
-        String newName = createCopyName(recipe.getName());
-        Recipe clone = cloneRecipe(recipe, newName);
+        String newName = createCopyName(currentRecipe.getName());
+        Recipe clone = cloneRecipe(currentRecipe, newName);
         Recipe savedRecipe = server.addRecipe(clone);
         if(savedRecipe != null){
             storage.getRecipes().add(savedRecipe);
             sidebarRecipeNamesList.getSelectionModel().select(savedRecipe);
+            System.out.println("Cloned recipe \"" + currentRecipe.getName() + "\" to \"" + newName + "\"");
         } else {
             errorCtrl.showGenericError("Recipe not selected to clone.");
         }
@@ -592,9 +705,10 @@ public class RecipesWindowCtrl {
      * @return a new Recipe that is clone of the original
      */
     private Recipe cloneRecipe(Recipe original, String newName) {
+        int totalServings = original.getTotalServings();
         List<String> stepsCopy = new ArrayList<>(original.getPreparationSteps());
 
-        Recipe clone = new Recipe(newName, null, stepsCopy);
+        Recipe clone = new Recipe(newName, totalServings, null, stepsCopy);
 
         List<RecipeIngredient> ingredientsCopy = new ArrayList<>();
         for (RecipeIngredient ri : original.getIngredients()) {
@@ -620,6 +734,7 @@ public class RecipesWindowCtrl {
         cancelSearch();
         Recipe newRecipe = new Recipe(
                 "New Recipe",
+                0,
                 new ArrayList<>(),
                 new ArrayList<>()
         );
@@ -654,6 +769,38 @@ public class RecipesWindowCtrl {
             else recipeNameField.setText(currentRecipe.getName());
         }
 
+    }
+
+    /**
+     * Add the servings entered to the total servings of a recipe.
+     */
+    public void addRecipeServings() {
+        if (currentRecipe == null) {
+            return;
+        }
+
+        String text = totalServingsField.getText();
+        if (text.isEmpty()) {
+            return;
+        }
+
+        int servings = Integer.parseInt(text);
+
+        if (servings < 0) {
+            errorCtrl.showGenericError("The amount of servings must be greater than or equal to 0!");
+            return;
+        }
+
+        currentRecipe.setTotalServings(servings);
+
+        Recipe updatedRecipe = server.updateRecipe(currentRecipe);
+        if (updatedRecipe != null) {
+            applyUpdatedRecipe(updatedRecipe);
+
+            openRecipe(currentRecipe);
+
+            totalServingsField.clear();
+        }
     }
 
     /**
@@ -720,7 +867,7 @@ public class RecipesWindowCtrl {
         if (selectedRecipes.isEmpty()) {
             return null; //return null if there are no selected recipes (i.e. the list of selected recipes is empty)
         }
-        return selectedRecipes.get(0);
+        return selectedRecipes.getFirst();
     }
 
     /**
@@ -728,14 +875,19 @@ public class RecipesWindowCtrl {
      *
      * @param recipe The recipe to be selected
      */
-
     public void setSelectedRecipe(Recipe recipe){
         if(!storage.getRecipes().contains(recipe)) return; //if the recipe is not in the list, do nothing
         MultipleSelectionModel<Recipe> selectionModel = sidebarRecipeNamesList.getSelectionModel();
         selectionModel.select(recipe);
     }
 
-
+    /**
+     * Displays a modal dialog for editing an ingredient and returns the entered values
+     *
+     * @param initialName ingredient name
+     * @param initialQuantity ingredient quantity
+     * @return Optional containing the name and quantity if confirmed, otherwise Optional is empty
+     */
     private Optional<Pair<String, String>> showIngredientPopUp(String initialName, String initialQuantity) {
         try {
             FXMLLoader loader = new FXMLLoader(
@@ -771,6 +923,9 @@ public class RecipesWindowCtrl {
         }
     }
 
+    /**
+     * Opens a new window displaying the current shopping list.
+     */
     private void showShoppingList() {
         try {
             FXMLLoader loader = new FXMLLoader(
@@ -796,7 +951,10 @@ public class RecipesWindowCtrl {
         }
     }
 
-
+    /**
+     * Updates the current recipe
+     * @param updated the updated recipe, or null to leave unchanged
+     */
     private void applyUpdatedRecipe(Recipe updated) {
         if (updated == null) {
             return;
@@ -812,11 +970,11 @@ public class RecipesWindowCtrl {
             if (storage.getFavoriteIDs().contains(currentRecipe.getId())) {
                 storage.getFavoriteIDs().remove(currentRecipe.getId());
                 favoriteImage.setImage(unFavorite);
-                System.out.println("Removed from favorites!");
+                System.out.println("Removed \""+currentRecipe.getName()+"\" from favorites!");
             } else {
                 storage.getFavoriteIDs().add(currentRecipe.getId());
                 favoriteImage.setImage(favorite);
-                System.out.println("Added to favorites!");
+                System.out.println("Added \""+currentRecipe.getName()+"\" to favorites!");
             }
             // Regardless of change, put new favorites to file.
             dataManipulator.saveFave();
